# GameboyAdvance

./: Cargo.toml
src/: gba.rs  lib.rs  main.rs  memory.rs  types.rs
src/arm7tdmi/: alu.rs  cpsr.rs  cpu.rs  data_transfer_instructions.rs  decoder.rs  instruction_table.rs  instructions.rs  interrupts.rs  mod.rs  registers.rs  sdt_instructions.rs  swap_instruction.rs
src/arm7tdmi/arm/: alu.rs  branch.rs  data_transfer_instructions.rs  instructions.rs  mod.rs  multiply.rs  swap_instruction.rs
src/arm7tdmi/thumb/: alu.rs  data_transfer_instructions.rs  jumps_and_calls.rs  mod.rs
src/debugger/: breakpoints.rs  debugger.rs  mod.rs  terminal_commands.rs  terminal_debugger.rs
src/graphics/: background.rs  color_effects.rs  display.rs  layers.rs  mod.rs  oam.rs  pallete.rs  ppu.rs  tile.rs
src/graphics/ppu_modes/: hblank.rs  hdraw.rs  mod.rs  vblank.rs
src/graphics/wrappers/: mod.rs  oam.rs  rotation_and_scaling.rs  tile.rs
src/io/: mod.rs  timers.rs
src/memory/: affine_parameters.rs  debugger_memory.rs  dispcnt.rs  io_handlers.rs  memory.rs  memory3.rs  memory_block.rs  mod.rs  oam.rs  oam_memory.rs
src/memory/wrappers/: bgcnt.rs  blending.rs  dispcnt.rs  dispstat.rs  dma.rs  mod.rs  tmcnt.rs  window.rs
src/utils/: bits.rs  instruction_to_string.rs  mod.rs  utils.rs
test_arm/: Makefile  a.out  bios_dump  conditions.txt  first.gba  test.c  test.s
test_arm/template/: mGBA-0.10.3-ubuntu64-lunar.tar.xz  mGBA-0.10.3-ubuntu64-lunar.tar.xz:Zone.Identifier
test_files/: thumb_long_branch.s
tests/: test_thumb_long_branch.rs
(+8 files in other folders)
