[package]
name = "gameboy_advance"
version = "0.1.0"
edition = "2021"
[profile.dev]
overflow-checks = false
debug = true
[profile.release]
debug = true
[dependencies]
crossterm = "0.27.0"
ctrlc = "3.4.4"
getopts = "0.2.21"
num-traits = "0.2.19"
regex = "1.11.1"
rstest = "0.23.0"
sdl2 = "0.37.0"
tui = "0.19.0"
